Fixed footer not showing. Added link to skype and footer menu.

--- a/maisa-bolt/theme/maisa-template/footer.css
+++ b/maisa-bolt/theme/maisa-template/footer.css
@@ -1,15 +1,21 @@
 /* definitions */
 .footer-content{
-    width: 80%;
+    width: 85%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 100px;
 }
 
 /* internal alignment */
-.footer-authors{
-    display: inline-block;
+.footer-authors {
+	display: inline-block;
     line-height: 50px;
+}
+.footer-authors p, .footer-authors a{
+    font-family: GothicItalic;
+    font-size: 13px;
+    color:gray;
+    text-decoration: none;
 }
 .footer-social-menu{
     display: inline-block;
