--- a/maisa-bolt/theme/maisa-template/mainstyle.css
+++ b/maisa-bolt/theme/maisa-template/mainstyle.css
@@ -86,6 +86,7 @@ html{
     margin: 170px auto;
     width: 85%;
     padding: 0px;
+    margin-bottom: 0px;
 }
 
 /* 1 - standart (1x1)*/
